venue date and location

--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
 
     <!-- navigation -->
     <section class="navbar">
-        <div class="event-details">holy nation summit</div>
+        <div class="event-details">
+
+                <h1 class="event-title">
+                        holy&nbsp;nation&nbsp;summit
+                    </h1>
+                    <h2 class="event-date">
+                        16 -19 April, 2020
+                        <span class="event-location">
+                            london
+                        </span>
+                    </h2>
+        </div>
         <a class="nav-cta">Register now</a>
     </section>
     <!-- switchable content -->
