gradient over video

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
     <div class="vid-container">
         <div class="gradient"></div>
+        <div class="gradient-2"></div>
             <video autoplay loop playsinline muted src="vids/HNS 2020- Highlight Reel - (Website).mp4" class="video-bg"
             poster="imgs/poster.png"></video>
     </div>
