--- a/index.html
+++ b/index.html
@@ -6,64 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <base href="https://ejiro1994.github.io/hns-registration" target="_blank">
     <title>first page</title>
 </head>
 
 <body>
     <div class="page-wrap" id="swup" class="transition-fade">
 
-    
-    <div class="vid-container">
-        <div class="gradient"></div>
-        <div class="gradient-2"></div>
-            <video autoplay loop playsinline muted src="vids/HNS 2020- Highlight Reel - (Website).mp4" class="video-bg"
-            poster="imgs/poster.png"></video>
-    </div>
 
-    <!-- navigation -->
-    <section class="navbar">
-        <div class="event-details">
+        <div class="vid-container">
+            <div class="gradient"></div>
+            <div class="gradient-2"></div>
+            <video autoplay loop playsinline muted src="vids/HNS 2020- Highlight Reel - (Website).mp4" class="video-bg"
+                poster="imgs/poster.png"></video>
+        </div>
+
+        <!-- navigation -->
+        <section class="navbar">
+            <div class="event-details">
 
                 <h1 class="event-title">
-                        holy&nbsp;nation&nbsp;summit
-                    </h1>
-                    <h2 class="event-date">
-                        16 -19 April, 2020
-                        <span class="event-location">
-                            london
-                        </span>
-                    </h2>
-        </div>
-        <a class="nav-cta">Register now</a>
-    </section>
-    <!-- switchable content -->
-    <main >
-        <!-- <h1>first page</h1> -->
+                    holy&nbsp;nation&nbsp;summit
+                </h1>
+                <h2 class="event-date">
+                    16 -19 April, 2020
+                    <span class="event-location">
+                        london
+                    </span>
+                </h2>
+            </div>
+            <a class="nav-cta">Register now <img class="cta-success" src="success.png" alt=""></a>
+        </section>
+        <!-- switchable content -->
+        <main>
+            <!-- <h1>first page</h1> -->
 
-        <!-- <a href="/agenda.html">go to next page</a> -->
-        <nav class="menu-nav">
-            <ul>
-                <a href="/agenda.html">
-                    <li>agenda</li>
-                </a>
-                <a href="/ministers.html">
-                    <li>ministers</li>
-                </a>
-                <a href="/highlights.html">
-                    <li>highlights</li>
-                </a>
-                <a href="/partners.html">
-                    <li>partners</li>
-                </a>
-                <a href="/venue.html">
-                    <li>venue</li>
-                </a>
-            </ul>
-        </nav>
-    </main>
-    <script defer src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
-    <script defer src="index.js"></script>
-</div>
+            <!-- <a href="/agenda.html">go to next page</a> -->
+            <nav class="menu-nav">
+                <ul>
+                    <a href="/agenda.html">
+                        <li>agenda</li>
+                    </a>
+                    <a href="/ministers.html">
+                        <li>ministers</li>
+                    </a>
+                    <a href="/highlights.html">
+                        <li>highlights</li>
+                    </a>
+                    <a href="/partners.html">
+                        <li>partners</li>
+                    </a>
+                    <a href="/venue.html">
+                        <li>venue</li>
+                    </a>
+                </ul>
+            </nav>
+        </main>
+        <script defer src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
+        <script defer src="index.js"></script>
+    </div>
 </body>
 
 </html>
