base url in agenda button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <!-- <a href="/agenda.html">go to next page</a> -->
             <nav class="menu-nav">
                 <ul>
-                    <a href="/agenda.html">
+                    <a href="/hns-registration/agenda.html">
                         <li>agenda</li>
                     </a>
                     <a href="/ministers.html">
