--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="/hns-registration/agenda.html">
                         <li>agenda</li>
                     </a>
-                    <a href="/ministers.html">
+                    <a href="/hns-registration/ministers.html">
                         <li>ministers</li>
                     </a>
                     <a href="/highlights.html">
