--- a/ministers.html
+++ b/ministers.html
@@ -22,7 +22,7 @@
     <main class="transition-fade">
         
         ministers
-        <a href="/index.html">go to home page please</a>
+        <a href="/hns-registration/index">go to home page please</a>
         
 
     </main>
