--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </span>
                 </h2>
             </div>
-            <a class="nav-cta">Register now <img class="cta-success" src="success.png" alt=""></a>
+            <a class="nav-cta" href="https://www.eventbrite.co.uk/e/holy-nation-summit-vii-qkms-7th-anniversary-convocation-tickets-96197105131?aff=ebdssbeac" target="_blank">Register&nbsp;now </a>
         </section>
         <!-- switchable content -->
         <main>
@@ -43,21 +43,21 @@
             <!-- <a href="/agenda.html">go to next page</a> -->
             <nav class="menu-nav">
                 <ul>
-                    <a href="/hns-registration/agenda.html">
-                        <li>agenda</li>
-                    </a>
-                    <a href="/hns-registration/ministers.html">
-                        <li>ministers</li>
-                    </a>
-                    <a href="/highlights.html">
-                        <li>highlights</li>
-                    </a>
-                    <a href="/partners.html">
-                        <li>partners</li>
-                    </a>
-                    <a href="/venue.html">
-                        <li>venue</li>
-                    </a>
+                    <li><a href="/hns-registration/agenda.html">
+                            agenda
+                        </a></li>
+                    <li><a href="/hns-registration/ministers.html">
+                            ministers
+                        </a></li>
+                    <li><a href="/highlights.html">
+                            highlights
+                        </a></li>
+                    <li><a href="/partners.html">
+                            partners
+                        </a></li>
+                    <li><a href="/venue.html">
+                            venue
+                        </a></li>
                 </ul>
             </nav>
         </main>
