--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- new animation js library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.3/gsap.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.3/CSSRulePlugin.min.js">
-        <!-- legacy animation js library -->
+    <!-- legacy animation js library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineLite.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/CSSRulePlugin.min.js">
@@ -23,6 +23,8 @@
         <div class="vid-container">
             <div class="gradient"></div>
             <div class="gradient-2">
+                <div class="lion-bg"></div>
+
                 <!-- <p>
                     &copy; holy nation summit
 
@@ -46,7 +48,9 @@
                     </span>
                 </h2>
             </div>
-            <a class="nav-cta" href="https://www.eventbrite.co.uk/e/holy-nation-summit-vii-qkms-7th-anniversary-convocation-tickets-96197105131?aff=ebdssbeac" target="_blank">Register&nbsp;now </a>
+            <a class="nav-cta"
+                href="https://www.eventbrite.co.uk/e/holy-nation-summit-vii-qkms-7th-anniversary-convocation-tickets-96197105131?aff=ebdssbeac"
+                target="_blank">Register&nbsp;now </a>
         </section>
         <!-- switchable content -->
         <main>
@@ -74,8 +78,8 @@
             </nav>
         </main>
         <footer>
-            <h3>&copy; 2020 - holy nation summit   &nbsp;<img src="imgs/HNS_Lion.png" alt="">  </h3>
-         
+            <h3>&copy; 2020 - holy nation summit &nbsp;<img src="imgs/HNS_Lion.png" alt=""> </h3>
+
         </footer>
         <script defer src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
         <script defer src="index.js"></script>
